--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -32,18 +32,115 @@ function Dealer(){
 		deck:new Array,
 		Count:0,
 		Value:0
-	},
-	this.Hit=function(card){
-		card = deck.splice(0,1);
+	}
+	this.CardPosition=1;
+	this.Hit = function(card){
+		var ndeck = deck.splice(0,1);
+		var card = ndeck[0];
+		console.log("Dealers "+this.CardPosition+" card is "+card);
 		this.cards.value += card.Value;
-		var cardArea = document.getElementById("DealerCard"+this.CardPosition).innerHTML="<img src="+card.img+"/>";
+		var cardArea = document.getElementById("DealerCard"+this.CardPosition).innerHTML="<img src='"+card.img+"'/>";
 		this.CardPosition++;
-	},
+	}
 	this.Hold= function(){
 		console.log("Dealer is holding");
-	},
+	}
 	this.CardPosition=1
 }
+//----------------!!!!!START OF GAME SCRIPT!!!!----------------
+	
+	
+//DEFINE THE DECK==================================
+var deck = [
+//`````````````````CLUBS```````````````````````````
+	
+	c1 = {
+		img:"cards/1.png",
+		value: 1},
+	c2 = {img:"cards/2.png", value: 2},
+	c3 = {img:"cards/3.png",value:3},
+	c4 = {img:"cards/4.png",value:4},
+	c5 = {img:"cards/5.png",value:5},
+	c6 = {img:"cards/6.png",value:6},
+	c7 = {img:"cards/7.png",value:7},
+	c8 = {img:"cards/8.png",value:8},
+	c9 = {img:"cards/9.png",value:9},
+	c10 = {img:"cards/10.png",value:10},
+	c11 = {img:"cards/11.png",value:10},
+	c12 = {img:"cards/12.png",value:10},
+	c13 = {img:"cards/13.png",value:10	},
+//```````````````DIAMONDS```````````````````````````
+	d1 = {
+		img:"cards/14.png",
+		value: function checkValue(){
+				if(player.cards.value>10){
+				this.value = 1;
+			}else{
+				this.value = 10; }}},
+	d2 = {img:"cards/15.png",value:2},
+	d3 = {img:"cards/16.png",value:3},
+	d4 = {img:"cards/17.png",value:4},
+	d5 = {img:"cards/18.png",value:5},
+	d6 = {img:"cards/19.png",value:6},
+	d7 = {img:"cards/20.png",value:7},
+	d8 = {img:"cards/21.png",value: 8},
+	d9 = {img:"cards/22.png",value:9},
+	d10 = {img:"cards/23.png",value:10},
+	d11 = {img:"cards/24.png",value:10},
+	d12 = {img:"cards/25.png",value:10},
+	d13 = {img:"cards/26.png",value:10	},
+//``````````````````````````````SPADES``````````````````````````
+	s1 = {
+		img:"cards/27.png",
+		value:1},
+	s2 = {img:"cards/28.png",value:2},
+	s3 = {img:"cards/29.png",value:3},
+	s4 = {img:"cards/30.png",value:4},
+	s5 = {img:"cards/31.png",value:5},
+	s6 = {img:"cards/32.png",value:6},
+	s7 = {img:"cards/33.png",value:7},
+	s8 = {img:"cards/34.png",value:8},
+	s9 = {img:"cards/35.png",value:9},
+	s10 = {img:"cards/36.png",value:10},
+	s11 = {img:"cards/37.png",value:10},
+	s12 = {img:"cards/38.png",value:10},
+	s13 = {img:"cards/39.png",value:10},
+//`````````````````````````````````````````````````HEARTS````````````````````````````
+	h1 = {
+		img:"cards/40.png",
+		value: function checkValue(){
+				if(player.cards.value>10){
+				this.value = 1;
+			}else{
+				this.value = 10;}}},
+	h2 = {img:"cards/41.png",value:2},
+	h3 = {img:"cards/42.png",value:3},
+	h4 = {img:"cards/43.png",value:4},
+	h5 = {img:"cards/44.png",value:5},
+	h6 = {img:"cards/45.png",value:6},
+	h7 = {img:"cards/46.png",value:7},
+	h8 = {img:"cards/47.png",value:8},
+	h9 = {img:"cards/48.png",value:9},
+	h10 = {img:"cards/49.png",value:10},
+	h11 = {img:"cards/50.png",value:10},
+	h12 = {img:"cards/51.png",value:10},
+	h13 = {img:"cards/52.png",value:10}
+//==============================END OF CARDS ===============================
+];
+
+
+Deckshuffle=function(nTimes, deck){
+	for(var fan=1;fan<=nTimes;fan++){
+		for(var num=deck.length-1;num>=1;num--){
+			//Swap the cards
+			var rand=Math.floor((Math.random()*num)); 
+			var temp=deck[num];
+			deck[num]=deck[rand];
+			deck[rand]=temp;
+		}
+	}
+}
+
 var playing = true;
 
 function getCookie(cname){
@@ -56,6 +153,19 @@ function getCookie(cname){
     }
     return "";
 }
+//SHUFFLE
+function shuffle(nTimes, deck){
+	for(var fan=1;fan<=nTimes;fan++){
+		for(var num=deck.length-1;num>=1;num--){
+			//Swap the cards
+			var rand=Math.floor((Math.random()*num)); 
+			var temp=deck[num];
+			deck[num]=deck[rand];
+			deck[rand]=temp;
+		}
+	}
+}
+
 //WRITE MESSAGE TO THE MESSAGE AREA ID
 function writeMessage(message){
 	document.getElementById("messageArea").innerHTML=message;
@@ -112,86 +222,7 @@ function writeMessage(message){
 		Welcome to Blackjack!
    </div>
 	<script>
-//----------------!!!!!START OF GAME SCRIPT!!!!----------------
-	
-	
-//DEFINE THE DECK==================================
-var deck = [
-// ~~~~~~~~~CARDS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-//`````````````````CLUBS```````````````````````````
-	c1 = {
-		img:"cards/c1.png",
-		value: 1},
-	c2 = {img:"cards/c2.png", value: 2},
-	c3 = {img:"cards/c3.png",value:3},
-	c4 = {img:"cards/c4.png",value:4},
-	c5 = {img:"cards/c5.png",value:5},
-	c6 = {img:"cards/c6.png",value:6},
-	c7 = {img:"cards/c7.png",value:7},
-	c8 = {img:"cards/c8.png",value:8},
-	c9 = {img:"cards/c9.png",value:9},
-	c10 = {img:"cards/c10.png",value:10},
-	c11 = {img:"cards/c11.png",value:10},
-	c12 = {img:"cards/c12.png",value:10},
-	c13 = {img:"cards/c13.png",value:10	},
-//```````````````DIAMONDS```````````````````````````
-	d1 = {
-		img:"cards/1.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10; }}},
-	d2 = {img:"cards/d2.png",value:2},
-	d3 = {img:"cards/d3.png",value:3},
-	d4 = {img:"cards/d4.png",value:4},
-	d5 = {img:"cards/d5.png",value:5},
-	d6 = {img:"cards/d6.png",value:6},
-	d7 = {img:"cards/d7.png",value:7},
-	d8 = {img:"cards/8.png",value: 8},
-	d9 = {img:"cards/d9.png",value:9},
-	d10 = {img:"cards/d10.png",value:10},
-	d11 = {img:"cards/d11.png",value:10},
-	d12 = {img:"cards/d12.png",value:10},
-	d13 = {img:"cards/d13.png",value:10	},
-//``````````````````````````````SPADES``````````````````````````
-	s1 = {
-		img:"cards/s1.png",
-		value:1},
-	s2 = {img:"cards/s2.png",value:2},
-	s3 = {img:"cards/s3.png",value:3},
-	s4 = {img:"cards/s4.png",value:4},
-	s5 = {img:"cards/s5.png",value:5},
-	s6 = {img:"cards/s6.png",value:6},
-	s7 = {img:"cards/s7.png",value:7},
-	s8 = {img:"cards/s8.png",value:8},
-	s9 = {img:"cards/s9.png",value:9},
-	s10 = {img:"cards/s10.png",value:10},
-	s11 = {img:"cards/s11.png",value:10},
-	s12 = {img:"cards/s12.png",value:10},
-	s13 = {img:"cards/s13.png",value:10},
-//`````````````````````````````````````````````````HEARTS````````````````````````````
-	h1 = {
-		img:"cards/1.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10;}}},
-	h2 = {img:"cards/h2.png",value:2},
-	h3 = {img:"cards/h3.png",value:3},
-	h4 = {img:"cards/h4.png",value:4},
-	h5 = {img:"cards/h5.png",value:5},
-	h6 = {img:"cards/h6.png",value:6},
-	h7 = {img:"cards/h7.png",value:7},
-	h8 = {img:"cards/h8.png",value:8},
-	h9 = {img:"cards/h9.png",value:9},
-	h10 = {img:"cards/h10.png",value:10},
-	h11 = {img:"cards/h11.png",value:10},
-	h12 = {img:"cards/h12.png",value:10},
-	h13 = {img:"cards/h13.png",value:10}
-//==============================END OF CARDS ===============================
-];
+var nDeck = shuffle(7, deck);
 var player = new Player;
 var dealer = new Dealer
 var choice = "";
@@ -205,20 +236,19 @@ var choice = "";
 	alert("Then we shall not deal...");
 	}
 //RUNS WHEN PAGE LOADS
-function game(deck) {
-//	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, you can play the game a total of 5 times before prompted to purchase the game. Please enjoy! :) ~A.S 'Reevo'" );
+function game(nDeck) {
+	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, you can play the game a total of 5 times before prompted to purchase the game. Please enjoy! :) ~A.S 'Reevo'" );
 	var turn = 1;
 	while(turn<6){
 		console.log("hi");
 		console.log(turn);
-		console.log(deck);
-//		shuffle(deck);
-		player.Hit(deck);
-//		dealer.Hit(deck[0]);
-		player.Hit(deck);
-//		dealer.Hit(deck[0]);
+		console.log(nDeck);
+		player.Hit(nDeck);
+		dealer.Hit(nDeck);
+		player.Hit(nDeck);
+		dealer.Hit(nDeck);
 		console.log(player.cards.Value);
-//		writeMessage("Your cards are worth "+player.cards.Value); 
+		writeMessage("Your cards are worth "+player.cards.Value); 
 		writeMessage("<br>Hit or Hold");
 		if(player.cards.Value>21){
 			//DEALER WINS
