--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -5,6 +5,11 @@
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="stylesheets/blackjackstylesheet.css">
 <script>
+function breakLine(){
+	var br = document.createElement("BR");
+	document.getElementById("messageArea").appendChild(br);
+	}
+	
 //THE PLAYER
 function Player(){
 	this.cards={
@@ -15,10 +20,18 @@ function Player(){
 	this.Hit = function(card){
 		var ndeck = deck.splice(0,1);
 		var card = ndeck[0];
-		console.log("Players "+this.CardPosition+" card is "+card);
-		this.cards.value += card.Value;
-		var cardArea = document.getElementById("PlayerCard"+this.CardPosition).innerHTML="<img src='"+card.img+"'/>";
-		player.CardPosition++;
+		player.cards.Value += card.value;
+			if(player.CardPosition<=8){
+			document.getElementById("PlayerCard"+player.CardPosition).innerHTML="<img src='"+card.img+"'/>";
+					player.CardPosition++;
+			}else{
+			console.log("Players cards go over 8 slots");
+			}
+		var node = document.createElement("LI");                 // Create a <li> node
+		var textnode = document.createTextNode("Your card value: "+player.cards.Value);         // Create a text node
+		node.appendChild(textnode);                              // Append the text to <li>
+		document.getElementById("messageArea").appendChild(node);
+		breakLine();
 	};
 	this.Hold= function(){
 		var playing = false;
@@ -37,27 +50,28 @@ function Dealer(){
 	this.Hit = function(card){
 		var ndeck = deck.splice(0,1);
 		var card = ndeck[0];
-		console.log("Dealers "+this.CardPosition+" card is "+card);
-		this.cards.value += card.Value;
-		var cardArea = document.getElementById("DealerCard"+this.CardPosition).innerHTML="<img src='"+card.img+"'/>";
-		this.CardPosition++;
+		dealer.cards.Value += card.value;
+			if(dealer.CardPosition<=8){
+			document.getElementById("DealerCard"+dealer.CardPosition).innerHTML="<img src='"+card.img+"'/>";
+			dealer.CardPosition++;
+			}else{
+			console.log("Dealer cards go over 8 slots");
+			}
+		var node = document.createElement("LI");                 							// Create a <li> node
+		var textnode = document.createTextNode("Dealers card value: "+dealer.cards.Value); // Create a text node
+		node.appendChild(textnode);                             						  // Append the text to <li>
+		document.getElementById("messageArea").appendChild(node);
 	}
 	this.Hold= function(){
 		console.log("Dealer is holding");
 	}
 	this.CardPosition=1
 }
-//----------------!!!!!START OF GAME SCRIPT!!!!----------------
-	
-	
-//DEFINE THE DECK==================================
 var deck = [
 //`````````````````CLUBS```````````````````````````
 	
-	c1 = {
-		img:"cards/1.png",
-		value: 1},
-	c2 = {img:"cards/2.png", value: 2},
+	c1 = {img:"cards/1.png",value:1},
+	c2 = {img:"cards/2.png",value:2},
 	c3 = {img:"cards/3.png",value:3},
 	c4 = {img:"cards/4.png",value:4},
 	c5 = {img:"cards/5.png",value:5},
@@ -68,31 +82,23 @@ var deck = [
 	c10 = {img:"cards/10.png",value:10},
 	c11 = {img:"cards/11.png",value:10},
 	c12 = {img:"cards/12.png",value:10},
-	c13 = {img:"cards/13.png",value:10	},
+	c13 = {img:"cards/13.png",value:10},
 //```````````````DIAMONDS```````````````````````````
-	d1 = {
-		img:"cards/14.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10; }}},
+	d1 = {img:"cards/14.png",value:1},
 	d2 = {img:"cards/15.png",value:2},
 	d3 = {img:"cards/16.png",value:3},
 	d4 = {img:"cards/17.png",value:4},
 	d5 = {img:"cards/18.png",value:5},
 	d6 = {img:"cards/19.png",value:6},
 	d7 = {img:"cards/20.png",value:7},
-	d8 = {img:"cards/21.png",value: 8},
+	d8 = {img:"cards/21.png",value:8},
 	d9 = {img:"cards/22.png",value:9},
 	d10 = {img:"cards/23.png",value:10},
 	d11 = {img:"cards/24.png",value:10},
 	d12 = {img:"cards/25.png",value:10},
-	d13 = {img:"cards/26.png",value:10	},
+	d13 = {img:"cards/26.png",value:10},
 //``````````````````````````````SPADES``````````````````````````
-	s1 = {
-		img:"cards/27.png",
-		value:1},
+	s1 = {img:"cards/27.png",value:1},
 	s2 = {img:"cards/28.png",value:2},
 	s3 = {img:"cards/29.png",value:3},
 	s4 = {img:"cards/30.png",value:4},
@@ -106,13 +112,7 @@ var deck = [
 	s12 = {img:"cards/38.png",value:10},
 	s13 = {img:"cards/39.png",value:10},
 //`````````````````````````````````````````````````HEARTS````````````````````````````
-	h1 = {
-		img:"cards/40.png",
-		value: function checkValue(){
-				if(player.cards.value>10){
-				this.value = 1;
-			}else{
-				this.value = 10;}}},
+	h1 = {img:"cards/40.png",value:1},
 	h2 = {img:"cards/41.png",value:2},
 	h3 = {img:"cards/42.png",value:3},
 	h4 = {img:"cards/43.png",value:4},
@@ -168,7 +168,11 @@ function shuffle(nTimes, deck){
 
 //WRITE MESSAGE TO THE MESSAGE AREA ID
 function writeMessage(message){
-	document.getElementById("messageArea").innerHTML=message;
+		var node = document.createElement("LI");                 // Create a <li> node
+		document.getElementById("messageArea").appendChild(node);
+		var textnode = document.createTextNode(message);         // Create a text node
+		node.appendChild(textnode);                              // Append the text to <li>
+		document.getElementById("messageArea").appendChild(node);
 }
 </script>
 </head>
@@ -215,13 +219,25 @@ function writeMessage(message){
         
         <!--CONTROL AREA-->
         <tr>
-        	<td id="control" colspan="8"> <button id="hit" onClick=dealCard() type="button">Hit</button> <button id="hold" onClick=hold() type="button">Hold</button></td>
+        	<td id="control" colspan="8"> <button id="hit" onClick=player.Hit() type="button">Hit</button> <button id="player.Hold" onClick=hold() type="button">Hold</button></td>
         </tr>
    </table>
    <div id="messageArea">
-		Welcome to Blackjack!
+		<ul>
+			<li>Welcome to Blackjack!</li>
+		</ul>
    </div>
 	<script>
+function clean(player, dealer, deck){
+	document.getElementById("messageArea").innerHTML="End of round...new Round Starting!";
+	player.cards.Value = 0;
+	player.CardPosition = 1;
+	dealer.cards.Value = 0;
+	dealer.CardPosition = 1;
+	var x = document.getElementById("PlayerCards");
+	var y = document.getElementById("DealerCards");
+	
+}
 var nDeck = shuffle(7, deck);
 var player = new Player;
 var dealer = new Dealer
@@ -231,7 +247,7 @@ var choice = "";
 	}while(choice!="y");
 	
 	if(choice =="y"){
-	game()
+		game()
 	}else { 
 	alert("Then we shall not deal...");
 	}
@@ -240,30 +256,53 @@ function game(nDeck) {
 	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, you can play the game a total of 5 times before prompted to purchase the game. Please enjoy! :) ~A.S 'Reevo'" );
 	var turn = 1;
 	while(turn<6){
-		console.log("hi");
-		console.log(turn);
-		console.log(nDeck);
+		writeMessage("-----------------THE SCRIPT HAS STARTED-----------------");
+		console.log("Turn # is"+turn);
 		player.Hit(nDeck);
 		dealer.Hit(nDeck);
 		player.Hit(nDeck);
 		dealer.Hit(nDeck);
-		console.log(player.cards.Value);
-		writeMessage("Your cards are worth "+player.cards.Value); 
-		writeMessage("<br>Hit or Hold");
-		if(player.cards.Value>21){
+		writeMessage("Will you Hit Or Hold?");
+		player.Hit(nDeck);
+		dealer.Hit(nDeck);
+		player.Hit(nDeck);
+		console.log("Player cards are valued at:"+player.cards.Value);
+		if (playing == false){
+			if(player.cards.Value>21){
+			//DEALER WINS
+			console.log("You held and Dealer has won");
+			turn++;
+			alert("Dealer has won, better luck next time sucka!");
+			//CLEAR BOARD FUNCTION GOES HERE
+			}
+			if(dealer.cards.Value>21){
+			//PLAYER WINS
+			console.log("You held and the player has won");
+			turn++;
+			alert("YOU WIN!!");
+			//CLEAR BOARD FUNCTION GOES HERE
+			}
+			if(dealer.cards.Value<player.cards.Value){
+				console.log("The dealer has less cards");
+			}
+		}
+	if(player.cards.Value>21){
 			//DEALER WINS
 			console.log("Dealer has won");
 			turn++;
-		}
-		if(dealer.cards.Value>21){
+			alert("Dealer has won, better luck next time sucka!");
+			//CLEAR BOARD FUNCTION GOES HERE
+			}
+			if(dealer.cards.Value>21){
 			//PLAYER WINS
 			console.log("player has won");
 			turn++;
-		}
-		turn++;
+			alert("YOU WIN!!");
+			//CLEAR BOARD FUNCTION GOES HERE
+			}
 	}
+	
 }
-	window.onload = game(deck);
 </script>
 </body>
 </html>
